--- a/src/Components/SideEvents/sideEvent.css
+++ b/src/Components/SideEvents/sideEvent.css
@@ -35,6 +35,11 @@
     color: white;
     text-align: center;
 }
+@media only screen and (max-width:776px){
+ .title-1{
+    margin-top:60px !important;
+}
+}
 
 .eventbtn{
     width: 180px !important;
