--- a/src/Components/HomeComponent/Aboutus/Aboutus.module.css
+++ b/src/Components/HomeComponent/Aboutus/Aboutus.module.css
@@ -1,5 +1,8 @@
 .AboutusContainer {
     margin-top: 50px;
+    /* margin-left: 50px !important; */
+    /* margin-right: 50px !important; */
+
 }
 
 .img_size_cred {
