--- a/src/Components/LoginFirst/LoginFirst.css
+++ b/src/Components/LoginFirst/LoginFirst.css
@@ -26,6 +26,13 @@
   text-align: center;
 }
 
+.loginFirst h3{
+  font-size: 25px;
+  text-transform: capitalize;
+  color: #4fbcee;
+  text-align: center;
+}
+
 .loginFirst img {
   width: 400px;
   margin: 20px;
