--- a/src/Components/EventsComponent/eventCard.css
+++ b/src/Components/EventsComponent/eventCard.css
@@ -116,13 +116,13 @@
 }
 
 .evePage .slideRight {
-  -webkit-transform: translateX(400px) scale(0.9);
-          transform: translateX(400px) scale(0.9);
+  -webkit-transform: translateX(400px) translateY(-50px) scale(0.9);
+          transform: translateX(400px) translateY(-50px) scale(0.9);
 }
 
 .evePage .slideLeft {
-  -webkit-transform: translateX(-400px) scale(0.9);
-          transform: translateX(-400px) scale(0.9);
+  -webkit-transform: translateX(-400px) translateY(-50px) scale(0.9);
+          transform: translateX(-400px) translateY(-50px) scale(0.9);
 }
 
 .evePage .hide {
